<resources>
    <string name="app_name">Firebase</string>

    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>

    <string name="pref_key">me.aungkooo.firebase.PREF_KEY</string>
    <string name="sign_up_label">Do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign out</string>
    <string name="warning">Warning</string>
    <string name="sign_out_message">Are you sure that you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="profile_image">Profile Image</string>

</resources>
