<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_email_sign_in"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_password_toggle"
        app:passwordToggleTint="@color/colorPrimary"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_password_sign_in"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:onClick="signInWithEmail"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <LinearLayout
        android:layout_marginBottom="@dimen/margin_normal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sign_up_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="changeSignUp"
            style="?buttonBarButtonStyle"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:onClick="signInWithGoogle"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:paddingStart="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:drawableStart="@drawable/ic_google_logo"
        android:text="@string/sign_in_with_google"
        android:foreground="?selectableItemBackground"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

</LinearLayout>