<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardElevation="@dimen/card_elevation"
    app:cardMaxElevation="@dimen/card_elevation_max"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:layout_marginTop="2dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="@dimen/padding_normal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_user_profile"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account_default"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/profile_image" />

            <TextView
                android:id="@+id/txt_username"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_gravity="center_vertical"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_email"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>